<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:contentDescription="@string/app_name"
        android:id="@+id/imageView"
        android:layout_width="259dp"
        android:layout_height="100dp"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="629dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/programme" />

    <EditText
        android:autofillHints=""
        android:id="@+id/editTextTextPersonName"
        android:layout_width="227dp"
        android:layout_height="53dp"
        android:layout_marginTop="116dp"
        android:layout_marginBottom="562dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:hint="@string/title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:autofillHints=""
        android:id="@+id/editTextDate"
        android:layout_width="222dp"
        android:layout_height="44dp"
        android:layout_marginTop="169dp"
        android:layout_marginBottom="518dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/date"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:autofillHints=""
        android:id="@+id/editTextTime"
        android:layout_width="165dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="235dp"
        android:layout_marginEnd="230dp"
        android:layout_marginRight="230dp"
        android:layout_marginBottom="450dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/start_time"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:autofillHints=""
        android:id="@+id/editTextTime2"
        android:layout_width="159dp"
        android:layout_height="54dp"
        android:layout_marginStart="226dp"
        android:layout_marginLeft="226dp"
        android:layout_marginTop="235dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="450dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/end_time"
        android:inputType="time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:autofillHints=""
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="254dp"
        android:layout_height="122dp"
        android:layout_marginStart="77dp"
        android:layout_marginLeft="77dp"
        android:layout_marginTop="295dp"
        android:layout_marginEnd="77dp"
        android:layout_marginRight="77dp"
        android:layout_marginBottom="314dp"
        android:ems="10"
        android:gravity="center|top"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:layout_width="265dp"
        android:layout_height="36dp"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="456dp"
        android:layout_marginEnd="74dp"
        android:layout_marginRight="74dp"
        android:layout_marginBottom="239dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="90dp"
            android:layout_height="34dp"
            android:text="@string/high" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="90dp"
            android:layout_height="34dp"
            android:text="@string/medium" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="90dp"
            android:layout_height="34dp"
            android:text="@string/low" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="71dp"
        android:layout_height="32dp"
        android:layout_marginStart="170dp"
        android:layout_marginLeft="170dp"
        android:layout_marginTop="424dp"
        android:layout_marginEnd="170dp"
        android:layout_marginRight="170dp"
        android:layout_marginBottom="275dp"
        android:gravity="center"
        android:text="@string/priority"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="124dp"
        android:layout_height="36dp"
        android:layout_marginStart="213dp"
        android:layout_marginLeft="213dp"
        android:layout_marginTop="503dp"
        android:layout_marginEnd="74dp"
        android:layout_marginRight="74dp"
        android:layout_marginBottom="192dp"
        android:text="@string/ongoing"
        android:textOff="@string/finished"
        android:textOn="@string/ongoing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="64dp"
        android:layout_height="32dp"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="507dp"
        android:layout_marginEnd="275dp"
        android:layout_marginRight="275dp"
        android:layout_marginBottom="192dp"
        android:gravity="center"
        android:text="@string/Status"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="243dp"
        android:layout_marginLeft="243dp"
        android:layout_marginTop="590dp"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        android:layout_marginBottom="93dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="71dp"
        android:layout_marginLeft="71dp"
        android:layout_marginTop="588dp"
        android:layout_marginEnd="247dp"
        android:layout_marginRight="247dp"
        android:layout_marginBottom="95dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>